deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mldegrees-ingress
  namespace: mld
spec:
  ingressClassName: cloudflare-tunnel-f6d
  rules:
    - host: mldegrees.com
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /api/auth/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /(api/.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /(.*)
            pathType: ImplementationSpecific
    - host: www.mldegrees.com
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /api/auth/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /(api/.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /(.*)
            pathType: ImplementationSpecific
    - host: machinelearningdegrees.com
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /api/auth/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /(api/.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /(.*)
            pathType: ImplementationSpecific
    - host: www.machinelearningdegrees.com
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /api/auth/(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: backend-service
                port:
                  number: 8080
            path: /(api/.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /(.*)
            pathType: ImplementationSpecific
